--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "341-classroom-notifier",
   "version": "1.0.0",
-  "description": "yes. ##TODO 1. Embed Sender 2. Time table     1. Static time table     2. Dynamic time table 3. Home work",
+  "description": "",
   "main": "index.js",
   "dependencies": {
     "discord.js": "^12.5.1"
