--- a/config.json
+++ b/config.json
@@ -1,1 +1,6 @@
-{"prefix":",","default_channel":"795678081971912705"}
+{
+    "prefix":",","default_channel":"795678081971912705",
+    "sheets_id": "1dr00FcWgeZVLsFP_959YtQ6GGNgoPaRUNbaIu7ujY50",
+    "api_id": "1767727530",
+    "info_id": "865607668"
+}
