--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "index.js",
   "dependencies": {
     "discord.js": "^12.5.1",
-    "googleapis": "^39.2.0",
-    "install": "^0.13.0"
+    "googleapis": "^67.0.0",
+    "install": "^0.13.0",
+    "readline": "^1.3.0"
   },
   "devDependencies": {},
   "scripts": {
