--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "discord.js": "^12.5.1",
-    "googleapis": "^67.0.0",
+    "https": "^1.0.0",
     "install": "^0.13.0",
     "readline": "^1.3.0"
   },
