--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "discord.js": "^12.5.1",
     "https": "^1.0.0",
     "install": "^0.13.0",
+    "node-fetch": "^2.6.1",
     "readline": "^1.3.0"
   },
   "devDependencies": {},
