--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "discord.js": "^12.5.1",
-    "https": "^1.0.0",
-    "install": "^0.13.0",
-    "node-fetch": "^2.6.1",
-    "readline": "^1.3.0"
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {},
   "scripts": {
