--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "embed_color": "#fcfc03",
+    "embed_color": "#edd780",
     "prefix": ",",
     "sheets_id": "1dr00FcWgeZVLsFP_959YtQ6GGNgoPaRUNbaIu7ujY50",
     "default_channel": "795678081971912705"
